force-app/main/default/objects/Operation__c/Operation__c.object-meta.xml
<CustomObject>
    <label>Operation</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>