force-app/main/default/objects/Operation__c/fields/Accrued_Interest_formula__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_formula__c</fullName>
    <formula>IF(ISBLANK(Accrued_Interest__c), 0, Accrued_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>