force-app/main/default/objects/Operation__c/fields/accrued_type__c.field-meta.xml
<CustomField>
    <fullName>accrued_type__c</fullName>
    <label>Accrued Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>