force-app/main/default/objects/Operation__c/fields/agreement_date__c.field-meta.xml
<CustomField>
    <fullName>agreement_date__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>