force-app/main/default/objects/Operation__c/fields/agreement_date_formula__c.field-meta.xml
<CustomField>
    <fullName>agreement_date_formula__c</fullName>
    <formula>TEXT(DAY(agreement_date__c)) &amp; &quot; &quot; &amp;
CASE(
MONTH(agreement_date__c),
1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;,
7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(agreement_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Date</label>
    <type>Text</type>
</CustomField>