force-app/main/default/objects/Operation__c/fields/Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_ID__c</fullName>
    <label>Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>