force-app/main/default/objects/Operation__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <formula>Application__r.agreement_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Number</label>
    <type>Text</type>
</CustomField>