force-app/main/default/objects/Operation__c/fields/AJB_PJB_Number__c.field-meta.xml
<CustomField>
    <fullName>AJB_PJB_Number__c</fullName>
    <label>AJB PJB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>