force-app/main/default/objects/Operation__c/fields/APHT_Number__c.field-meta.xml
<CustomField>
    <fullName>APHT_Number__c</fullName>
    <label>APHT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>