force-app/main/default/objects/Operation__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Application__r.Survey__c, Application__r.Application_ID__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application ID</label>
    <type>Text</type>
</CustomField>