force-app/main/default/objects/Operation__c/fields/Bukti_Perolehan_Jaminan__c.field-meta.xml
<CustomField>
    <fullName>Bukti_Perolehan_Jaminan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bukti Perolehan Jaminan</label>
    <type>Checkbox</type>
</CustomField>