force-app/main/default/objects/Operation__c/fields/Bukti_Persetujuan_SPK_Debitur__c.field-meta.xml
<CustomField>
    <fullName>Bukti_Persetujuan_SPK_Debitur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bukti Persetujuan SPK Debitur</label>
    <type>Checkbox</type>
</CustomField>