force-app/main/default/objects/Operation__c/fields/Collateral_ID__c.field-meta.xml
<CustomField>
    <fullName>Collateral_ID__c</fullName>
    <label>Collateral ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>