force-app/main/default/objects/Operation__c/fields/Config_Operation_Tab__c.field-meta.xml
<CustomField>
    <fullName>Config_Operation_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Operation Tab</label>
    <referenceTo>Config_Operation_Tab__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>