force-app/main/default/objects/Operation__c/fields/correction_bank_account__c.field-meta.xml
<CustomField>
    <fullName>correction_bank_account__c</fullName>
    <label>correction_bank_account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>