force-app/main/default/objects/Operation__c/fields/Covernote_Notaris_dan_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Covernote_Notaris_dan_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covernote Notaris dan Invoice</label>
    <type>Checkbox</type>
</CustomField>