force-app/main/default/objects/Operation__c/fields/customer_bank_name__c.field-meta.xml
<CustomField>
    <fullName>customer_bank_name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>