force-app/main/default/objects/Operation__c/fields/Data_Pihak_ke_3__c.field-meta.xml
<CustomField>
    <fullName>Data_Pihak_ke_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Pihak ke 3</label>
    <type>Checkbox</type>
</CustomField>