force-app/main/default/objects/Operation__c/fields/Dokumentasi_dan_Daftar_Hadir_Akad__c.field-meta.xml
<CustomField>
    <fullName>Dokumentasi_dan_Daftar_Hadir_Akad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dokumentasi dan Daftar Hadir Akad</label>
    <type>Checkbox</type>
</CustomField>