force-app/main/default/objects/Operation__c/fields/effective_date__c.field-meta.xml
<CustomField>
    <fullName>effective_date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>