force-app/main/default/objects/Operation__c/fields/Effective_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Formula__c</fullName>
    <formula>TEXT(DAY(effective_date__c )) &amp; &quot; &quot; &amp;
CASE(
MONTH(effective_date__c ),
1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;,
7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(effective_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Text</type>
</CustomField>