force-app/main/default/objects/Operation__c/fields/f559_doc_url__c.field-meta.xml
<CustomField>
    <fullName>f559_doc_url__c</fullName>
    <label>f559_doc_url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>