force-app/main/default/objects/Operation__c/fields/FKD_Marketing__c.field-meta.xml
<CustomField>
    <fullName>FKD_Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKD Marketing</label>
    <referenceTo>FKD_Marketing__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>