force-app/main/default/objects/Operation__c/fields/Foto_Survey__c.field-meta.xml
<CustomField>
    <fullName>Foto_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foto Survey</label>
    <type>Checkbox</type>
</CustomField>