force-app/main/default/objects/Operation__c/fields/full_ntf_amount__c.field-meta.xml
<CustomField>
    <fullName>full_ntf_amount__c</fullName>
    <label>NTF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>