force-app/main/default/objects/Operation__c/fields/funding_method__c.field-meta.xml
<CustomField>
    <fullName>funding_method__c</fullName>
    <label>funding_method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Funding</fullName>
            </value>
            <value>
                <fullName>Split Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>