force-app/main/default/objects/Operation__c/fields/funding_method_selected__c.field-meta.xml
<CustomField>
    <fullName>funding_method_selected__c</fullName>
    <label>funding_method_selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>