force-app/main/default/objects/Operation__c/fields/funding_note__c.field-meta.xml
<CustomField>
    <fullName>funding_note__c</fullName>
    <label>funding_note</label>
    <type>TextArea</type>
</CustomField>