force-app/main/default/objects/Operation__c/fields/Golive_Success__c.field-meta.xml
<CustomField>
    <fullName>Golive_Success__c</fullName>
    <label>Golive Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>