force-app/main/default/objects/Operation__c/fields/Hasil_Cek_SKPT__c.field-meta.xml
<CustomField>
    <fullName>Hasil_Cek_SKPT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hasil Cek SKPT</label>
    <type>Checkbox</type>
</CustomField>