force-app/main/default/objects/Operation__c/fields/History_PBB__c.field-meta.xml
<CustomField>
    <fullName>History_PBB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History PBB</label>
    <type>Checkbox</type>
</CustomField>