force-app/main/default/objects/Operation__c/fields/IMB_Number__c.field-meta.xml
<CustomField>
    <fullName>IMB_Number__c</fullName>
    <label>IMB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>