force-app/main/default/objects/Operation__c/fields/Is_Accrued_Value_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Accrued_Value_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accrued Value Changed</label>
    <type>Checkbox</type>
</CustomField>