force-app/main/default/objects/Operation__c/fields/is_auto_golive__c.field-meta.xml
<CustomField>
    <fullName>is_auto_golive__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is_auto_golive</label>
    <type>Checkbox</type>
</CustomField>