force-app/main/default/objects/Operation__c/fields/isTest__c.field-meta.xml
<CustomField>
    <fullName>isTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTest</label>
    <type>Checkbox</type>
</CustomField>