force-app/main/default/objects/Operation__c/fields/judol_and_agent_BFI_check_result__c.field-meta.xml
<CustomField>
    <fullName>judol_and_agent_BFI_check_result__c</fullName>
    <label>Judol And Agent BFI Check Result</label>
    <type>TextArea</type>
</CustomField>