force-app/main/default/objects/Operation__c/fields/judol_and_agent_BFI_result_formula__c.field-meta.xml
<CustomField>
    <fullName>judol_and_agent_BFI_result_formula__c</fullName>
    <formula>IF(
OR(
judol_and_agent_BFI_check_result__c = &quot;&lt;span&gt;&amp;#8203;&lt;/span&gt;&quot;,
judol_and_agent_BFI_check_result__c = &quot;&quot;
),
&quot;Tidak terindikasi Judol&quot;,
judol_and_agent_BFI_check_result__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judol Check Result</label>
    <type>Text</type>
</CustomField>