force-app/main/default/objects/Operation__c/fields/KK_Scan_Barcode_Aktif__c.field-meta.xml
<CustomField>
    <fullName>KK_Scan_Barcode_Aktif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KK dengan Scan Barcode Aktif</label>
    <type>Checkbox</type>
</CustomField>