force-app/main/default/objects/Operation__c/fields/Konfirmasi_Tanggal_Keluar_Sert__c.field-meta.xml
<CustomField>
    <fullName>Konfirmasi_Tanggal_Keluar_Sert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Konfirmasi Tanggal Keluar Sert</label>
    <type>Checkbox</type>
</CustomField>