force-app/main/default/objects/Operation__c/fields/Legalisir_Buku_Nikah__c.field-meta.xml
<CustomField>
    <fullName>Legalisir_Buku_Nikah__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legalisir Buku Nikah</label>
    <type>Checkbox</type>
</CustomField>