force-app/main/default/objects/Operation__c/fields/Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>