force-app/main/default/objects/Operation__c/fields/Loan_Information_Formula__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Opportunity/&quot; &amp; Application__r.Loan_Information__c &amp; &quot;/view&quot;,  Application__r.Loan_Information__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Information</label>
    <type>Text</type>
</CustomField>