force-app/main/default/objects/Operation__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <formula>Loan_Information__r.Loan_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Status</label>
    <type>Text</type>
</CustomField>