force-app/main/default/objects/Operation__c/fields/Masa_Berlaku_Konf_Pelunasan__c.field-meta.xml
<CustomField>
    <fullName>Masa_Berlaku_Konf_Pelunasan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masa Berlaku Konf Pelunasan</label>
    <type>Checkbox</type>
</CustomField>