force-app/main/default/objects/Operation__c/fields/Nomor_Perjanjian_Notariil__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Perjanjian_Notariil__c</fullName>
    <label>Nomor Perjanjian Notariil</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>