force-app/main/default/objects/Operation__c/fields/Note_Bukti_Perolehan_Jaminan__c.field-meta.xml
<CustomField>
    <fullName>Note_Bukti_Perolehan_Jaminan__c</fullName>
    <label>Note Bukti Perolehan Jaminan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>