force-app/main/default/objects/Operation__c/fields/Note_Bukti_Persetujuan_SPK_Debitur__c.field-meta.xml
<CustomField>
    <fullName>Note_Bukti_Persetujuan_SPK_Debitur__c</fullName>
    <label>Note Bukti Persetujuan SPK Debitur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>