force-app/main/default/objects/Operation__c/fields/Note_Covernote_Notaris_dan_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Note_Covernote_Notaris_dan_Invoice__c</fullName>
    <label>Note Covernote Notaris dan Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>