force-app/main/default/objects/Operation__c/fields/Note_Data_Pihak_ke_3__c.field-meta.xml
<CustomField>
    <fullName>Note_Data_Pihak_ke_3__c</fullName>
    <label>Note Data Pihak ke 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>