force-app/main/default/objects/Operation__c/fields/Note_Dokumentasi_dan_Daftar_Hadir_Akad__c.field-meta.xml
<CustomField>
    <fullName>Note_Dokumentasi_dan_Daftar_Hadir_Akad__c</fullName>
    <label>Note Dokumentasi dan Daftar Hadir Akad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>