force-app/main/default/objects/Operation__c/fields/Note_Foto_Survey__c.field-meta.xml
<CustomField>
    <fullName>Note_Foto_Survey__c</fullName>
    <label>Note Foto Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>