force-app/main/default/objects/Operation__c/fields/Note_Legalisir_Buku_Nikah__c.field-meta.xml
<CustomField>
    <fullName>Note_Legalisir_Buku_Nikah__c</fullName>
    <label>Note Legalisir Buku Nikah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>