force-app/main/default/objects/Operation__c/fields/Note_NPWP_Pemilik_Jaminan__c.field-meta.xml
<CustomField>
    <fullName>Note_NPWP_Pemilik_Jaminan__c</fullName>
    <label>Note NPWP Pemilik Jaminan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>