force-app/main/default/objects/Operation__c/fields/Note_Premi_dan_CN_Sesuai__c.field-meta.xml
<CustomField>
    <fullName>Note_Premi_dan_CN_Sesuai__c</fullName>
    <label>Note Premi dan CN Sesuai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>