force-app/main/default/objects/Operation__c/fields/Note_Premi_Santunan_Duka__c.field-meta.xml
<CustomField>
    <fullName>Note_Premi_Santunan_Duka__c</fullName>
    <label>Note Premi Santunan Duka</label>
    <length>255</length>
    <type>Text</type>
</CustomField>