force-app/main/default/objects/Operation__c/fields/Note_Resi_IMB__c.field-meta.xml
<CustomField>
    <fullName>Note_Resi_IMB__c</fullName>
    <label>Note Resi IMB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>