force-app/main/default/objects/Operation__c/fields/Note_SHM_Terupdate__c.field-meta.xml
<CustomField>
    <fullName>Note_SHM_Terupdate__c</fullName>
    <label>Note SHM Terupdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>