force-app/main/default/objects/Operation__c/fields/Note_SPPT_dan_STTS__c.field-meta.xml
<CustomField>
    <fullName>Note_SPPT_dan_STTS__c</fullName>
    <label>Note SPPT dan STTS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>