force-app/main/default/objects/Operation__c/fields/Note_TC_After__c.field-meta.xml
<CustomField>
    <fullName>Note_TC_After__c</fullName>
    <label>Note TC After</label>
    <length>255</length>
    <type>Text</type>
</CustomField>