force-app/main/default/objects/Operation__c/fields/Note_TDP_SPB_Benar__c.field-meta.xml
<CustomField>
    <fullName>Note_TDP_SPB_Benar__c</fullName>
    <label>Note TDP SPB Benar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>