force-app/main/default/objects/Operation__c/fields/OwnerId_Old__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerId Old</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>