force-app/main/default/objects/Operation__c/fields/OwnerId_Old_Name__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_Old_Name__c</fullName>
    <label>OwnerId Old Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>