force-app/main/default/objects/Operation__c/fields/Persetujuan_Penunjukan_Notaris__c.field-meta.xml
<CustomField>
    <fullName>Persetujuan_Penunjukan_Notaris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Persetujuan Penunjukan Notaris</label>
    <type>Checkbox</type>
</CustomField>