force-app/main/default/objects/Operation__c/fields/Premi_dan_CN_Sesuai__c.field-meta.xml
<CustomField>
    <fullName>Premi_dan_CN_Sesuai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premi dan CN Sesuai</label>
    <type>Checkbox</type>
</CustomField>