force-app/main/default/objects/Operation__c/fields/Premi_Santunan_Duka__c.field-meta.xml
<CustomField>
    <fullName>Premi_Santunan_Duka__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premi Santunan Duka</label>
    <type>Checkbox</type>
</CustomField>