force-app/main/default/objects/Operation__c/fields/RefHistory_App__c.field-meta.xml
<CustomField>
    <fullName>RefHistory_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefHistory_App</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Operations (RefHistory_App)</relationshipLabel>
    <relationshipName>Operations1</relationshipName>
    <type>Lookup</type>
</CustomField>