force-app/main/default/objects/Operation__c/fields/Rekomendasi__c.field-meta.xml
<CustomField>
    <fullName>Rekomendasi__c</fullName>
    <label>Rekomendasi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>