force-app/main/default/objects/Operation__c/fields/Resi_IMB__c.field-meta.xml
<CustomField>
    <fullName>Resi_IMB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resi IMB</label>
    <type>Checkbox</type>
</CustomField>