force-app/main/default/objects/Operation__c/fields/sf_funding_holdap_cb__c.field-meta.xml
<CustomField>
    <fullName>sf_funding_holdap_cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sf_funding_holdap_cb</label>
    <type>Checkbox</type>
</CustomField>