force-app/main/default/objects/Operation__c/fields/sf_imb_value__c.field-meta.xml
<CustomField>
    <fullName>sf_imb_value__c</fullName>
    <label>sf_imb_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>