force-app/main/default/objects/Operation__c/fields/sf_pajak_note__c.field-meta.xml
<CustomField>
    <fullName>sf_pajak_note__c</fullName>
    <label>sf_pajak_note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>