force-app/main/default/objects/Operation__c/fields/sf_ro_pot_funding_cb__c.field-meta.xml
<CustomField>
    <fullName>sf_ro_pot_funding_cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sf_ro_pot_funding_cb</label>
    <type>Checkbox</type>
</CustomField>