force-app/main/default/objects/Operation__c/fields/sf_ro_pot_funding_value__c.field-meta.xml
<CustomField>
    <fullName>sf_ro_pot_funding_value__c</fullName>
    <label>sf_ro_pot_funding_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>