force-app/main/default/objects/Operation__c/fields/sf_take_over_cb__c.field-meta.xml
<CustomField>
    <fullName>sf_take_over_cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Over</label>
    <type>Checkbox</type>
</CustomField>