force-app/main/default/objects/Operation__c/fields/sf_take_over_note__c.field-meta.xml
<CustomField>
    <fullName>sf_take_over_note__c</fullName>
    <label>Catatan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>