force-app/main/default/objects/Operation__c/fields/SHM_Terupdate__c.field-meta.xml
<CustomField>
    <fullName>SHM_Terupdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SHM Terupdate</label>
    <type>Checkbox</type>
</CustomField>