force-app/main/default/objects/Operation__c/fields/SPPT_dan_STTS__c.field-meta.xml
<CustomField>
    <fullName>SPPT_dan_STTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPPT dan STTS</label>
    <type>Checkbox</type>
</CustomField>